# dc_django_utils

./: .git-blame-ignore-revs  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  dev-requirements.txt  manage.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: release.yml  test.yml
dc_utils/: README.md  apps.py  context_processors.py  filter_widgets.py  forms.py  helpers.py  middleware.py  storages.py  urls.py  views.py  widgets.py
dc_utils/helpers/update_ec2_sg/: add_ip.py  utils.py
dc_utils/helpers/update_ec2_sg/tests/: test_utils.py
dc_utils/settings/: deployment_static_settings.py  pipeline.py  whitenoise.py
dc_utils/templates/: 404.html  500.html  dc_base.html  dc_base_naked.html
dc_utils/templates/dc_forms/: field.html  field_checkbox.html  field_date.html  field_radio.html  field_radio_cluster.html  form.html
dc_utils/templates/html_tester/: all_elements.html  sample_form.html
dc_utils/templates/includes/: cy-footer-copyright.html  cy-footer.html  en-footer-copyright.html  en-footer.html
dc_utils/templatetags/: __init__.py  dc_forms.py
dc_utils/tests/: helpers.py  test_dc_forms.py  test_forms.py  test_helpers.py  test_urls.py
dc_utils/tests/helpers/: test_helpers.py
locale/cy/LC_MESSAGES/: django.po
requirements/: ci.txt  dev.txt
tests/: test_basic_auth.py  test_templates.py
tests/testapp/: settings.py  urls.py  wsgi.py
tests/testapp/assets/scss/: styles.scss
tests/testapp/templates/: base.html
