[project]
name = "dc_django_utils"
version = "6.0.3"
description = "This is a package to provide some common utilities for Django projects at Democracy Club."
readme = "README.md"
authors = [{name = "Sym Roe"}, {name = "Virginia Dooley"}]

dependencies = [
	"django>=3.2,<4.3",
	"django-pipeline==3.0.0",
	"markdown",
	"django-localflavor==4.0",
	"setuptools==69.2.0",
	"whitenoise",
	"pysass",
	"jsmin<3.1",
]



[project.urls]
Homepage = "https://github.com/DemocracyClub/dc_django_utils"
Changelog = "https://github.com/DemocracyClub/dc_django_utils/releases"
Issues = "https://github.com/DemocracyClub/dc_django_utils/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80

[project.optional-dependencies]
test = ["pytest", "pytest-flakes"]
