[metadata]
name = dc_django_utils
version = attr: dc_utils.__version__
author = Democracy Club
author_email = developers@democracyclub.org.uk
description = Django common utils and helpers for Democracy Club projects

[options]
packages = find:
include_package_data = true
install_requires =
    whitenoise == 5.2.0
    django-pipeline == 2.0.6
    libsass == 0.21.0
    jsmin==3.0.0
    django>=3.2,<4.2
    markdown
    pytest-django
    pytest
    pytidylib

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = dc_utils
line_length = 79
multi_line_output = 5
